# ramses_extras

./: .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURAL_CLEANUP_PLAN.md  ARCHITECTURE_MIGRATION_PLAN.md  AUTOMATION_REFACTORING_PLAN.md  BASE_CARD_AUTOMATIC_FEATURES.md  BLOCKING_IMPORT_FIX.md  CLEANUP_PLAN.md  CONTRIBUTING.md  DEHUMIDIFY_PLAN.md  DEHUMIDIFY_TODOS.md  ENTITY_NAMING_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  ENTITY_ORGANIZATION_STRATEGY.md  FEATURE_PLATFORM_CLEANUP_FINAL_STATUS.md  FEATURE_PLATFORM_CLEANUP_IMPLEMENTATION_PLAN.md  HVAC_FAN_CARD_PATH_FIX.md  IMPLEMENTATION_REFERENCE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INITIALIZATION_FIXES.md  LAZY_ENTITY_CREATION_IMPLEMENTATION.md  Makefile  README.md  README_DEV.md  RELEASE_NOTES_0.19.0.md  RELEASE_NOTES_0.19.2.md  TESTING_VERSION_MISMATCH.md  TEST_FIXES_NEEDED.md  VERSION_BANNER_UPDATE.md  WEBSOCKET_BLOCKING.md  cleanup_lovelace_resources.py  codecov.yml  complete_verification.py  conftest.py  debug_device_extraction.py  deploy_card_fix.sh  (+27 more)
.github/: CODEOWNERS  dependabot.yml  setup-branch-protection.sh
.github/workflows/: check-integration.yml  check-lint.yml  check-test.yml  check-type.yml  ci.yml  codeql.yml  dependency-review.yml  dependency-update.yml  hacs-validate.yml  hassfest.yml  integration.yml  pr-validation.yml  quality.yml  release.yml  test.yml  tests.yml  validate-workflows.yml
config/: .eslintignore  .eslintrc.json  .pre-commit-config.yaml  .prettierignore  eslint.config.js  mypy.ini  package-lock.json  package.json
custom_components/: ramses
custom_components.backup/: manifest.json
custom_components.backup/ramses_extras/: __init__.py  sensor.py  websocket_api.py
custom_components/ramses_extras/: __init__.py  binary_sensor.py  config_flow.py  const.py  extras_registry.py  feature_utils.py  manifest.json  number.py  select.py  sensor.py  services.yaml  services_integration.py  switch.py  todo.md  websocket_api.py  websocket_integration.py
deployments/: README.md
deployments/ha-sim/: README.md  configuration.yaml.example  docker-compose.yml
deployments/makefile-targets/: README.md
docs/: 1 main menu.md  ARCHITECTURE.md  ARCHITECTURE_UPDATE.md  CARD_PERFORMANCE_IMPROVEMENTS.md  CLEANUP_COMPLETE.md  CLEANUP_FINAL_STATUS.md  CLEANUP_PROGRESS.md  CO2_CONTROL_DESIGN.md  CODE_REVIEW_DEBUGGER_OPTIMIZATION.md  CONFIGURATION_STRATEGY.md  CONFIG_FLOW_EXTENSION_COMPLETE.md  CONFIG_FLOW_FIX.md  CONST_FILE_CLEANUP.md  DEHUMIDIFY_TODOS.md  DOCSTRING_PROGRESS.md  DOCUMENTATION_PLAN.md  DOCUMENTATION_VALIDATION_REPORT.md  ENHANCED_DEVICE_DISCOVERY_ARCHITECTURE.md  ENTITYMANAGER_API_REFERENCE.md  ENTITYMANAGER_FRAMEWORK_INTEGRATION.md  ENTITYMANAGER_MIGRATION_GUIDE.md  ENTITY_MANAGEMENT_STRATEGY.md  ENTITY_NAMING_OPTIMIZATION_PLAN.md  ENTITY_ORGANIZATION_STRATEGY.md  ENVIRONMENT_AWARE_PATHS.md  FAN_CONFIGURATION_CARD_IMPLEMENTATION_PLAN.md  FAN_CONFIGURATION_SCHEMA_DRAFT.md  FAN_CONFIGURATION_USER_GUIDE.md  FAN_CONTROL_ARCHITECTURE.md  FAN_SPEED_ARBITRATION_IMPLEMENTATION_PLAN.md  FEATURE_CENTRIC_ARCHITECTURE.md  FILES_NO_LONGER_NEEDED.md  FRAMEWORK_REORGANIZATION_PLAN.md  FRAMewORK_MIGRATION_BENEFITS.md  HA_SIM_TEST_TOOL.md  HELLO_WORLD_TEMPLATE_FEATURE.md  Here's the PR 764 status overview:  JS_FEATURE_REORGANIZATION.md  JS_MESSAGE_LISTENER.md  LEGACY_FILES_AUDIT.md  (+39 more)
docs/wiki/: API-Reference.md  Debugging-and-Troubleshooting.md  Development-Guide.md  Device-Feature-Management.md  Entity-Management.md  Feature-Catalog.md  Feature-System.md  Framework-Foundation.md  Frontend-Architecture.md  Getting-Started-Devs.md  Getting-Started-Users.md  Home-Assistant-Integration.md  Home.md  Implementation-Details.md  Overview.md  System-Architecture.md  todo.md
features/co2_control/: IMPLEMENTATION_PLAN.md
features/device_simulator/: IMPLEMENTATION_PLAN.md
icons/: LICENCE.md
scripts/: activate_dev.sh  annotate_device_db.py  build_device_db.py  extract_response_pairs.py  generate_synthetic_replies.py  harvest_ramses_logs.py  local-ci.sh  mypy_clean.sh  setup_eslint.sh  setup_js.sh  test-lint.sh  test_device_simulator.py  use_venv.sh
tests/: test_card_deployment.py  test_co2_control.py  test_config_flow.py  test_config_flow_advanced.py  test_config_flow_coverage.py  test_config_flow_init_coverage.py  test_const.py  test_const_consolidation_verification.py  test_enhanced_device_discovery.py  test_entity_creation_logic.py  test_entity_creation_logic_fixed.py  test_extras_registry.py  test_lazy_entity_creation_with_device_selection.py  test_main_init.py  test_orphaned_device_cleanup.py  test_phase4_integration.py  test_registry.py  test_sensor.py  test_services_integration.py  test_simple_caching.py  test_websocket_integration.py
tests/config_flow/: test_config_flow_integration.py
tests/edge_cases/: test_error_handling.py
tests/features/: test_full_coverage.py
tests/framework/: test_cards.py  test_devices_setup.py  test_features_setup.py  test_log_once.py  test_platform.py  test_ramses_commands.py  test_ramses_message_stream.py  test_rf_config_validation.py  test_simple_entity_manager.py  test_transport_monitor.py  test_yaml_setup.py
tests/frontend/: README.md  setup.js  test-hvac-fan-card.js  test-integration.js  test-template-helpers.js
tests/helpers/: test_common_utils.py  test_common_validation.py  test_config_manager.py  test_device.py  test_device_feature_mapping.py  test_device_filter.py  test_device_helpers.py  test_entity_naming.py  test_entity_naming_simple.py  test_paths.py  test_platform.py  test_ramses_commands.py  test_registry_websocket.py  test_service_registration.py
tests/integration/: test_framework_integration.py
tests/managers/: TEST_COVERAGE_SUMMARY.md  test_broker_retrieval.py  (+7 more)
tools/: audit_all.yaml  audit_all_reviewed.yaml  audit_device_db.py  audit_fan.yaml  audit_new_entries.yaml  audit_new_entries_co2.yaml  audit_new_entries_fan.yaml  audit_new_entries_fan_reviewed.yaml  audit_new_entries_rem.yaml  audit_new_entries_rem_reviewed.yaml  ha_sim_test.py
www/: device-simulator-card.js
(+693 files in other folders)
