[tool.poetry]
name = "ramses_extras"
version = "0.3.0"
description = "Extra features for Ramses CC integration"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
mypy = "^1.11.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
pre-commit = "^3.8.0"
typing-extensions = "^4.15.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Only check source files, not installed packages
files = ["custom_components", "tests"]

# Follow imports but skip type checking external libraries
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "ramses_cc.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--asyncio-mode=auto",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
