[tool.poetry]
name = "ramses_extras"
version = "0.3.0"
description = "Extra features for Ramses CC integration"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
mypy = "^1.11.0"
ruff = "^0.6.0"
pre-commit = "^3.8.0"
typing-extensions = "^4.15.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Only check source files, not installed packages
files = ["custom_components", "tests"]

# Follow imports but skip type checking external libraries
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "ramses_cc.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    "setup.py",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "PIE", # flake8-pie
    "RET", # flake8-return
]
ignore = [
    "E203", # whitespace before ':'
    "COM812", # missing-trailing-comma
    "B007", # unused loop variable (often used in loop logic)
    "UP035", # typing imports (still widely used)
    "F401", # unused imports (some are used for type checking)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--asyncio-mode=auto",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
