[tool.poetry]
name = "ramses_extras"
version = "0.3.0"
description = "Extra features for Ramses CC integration"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
homeassistant = "2025.10.4"

[tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
 pytest-asyncio = "^0.24.0"
 mypy = "^1.11.0"
 ruff = "^0.6.0"
 pre-commit = "^3.8.0"
 typing-extensions = "^4.15.0"
 types-PyYAML = "^6.0.12"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
 pytest-homeassistant-custom-component = "0.13.289"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
  files = [
    "custom_components"
  ]
  exclude = "tests/virtual_rf/*"

  follow_imports = "skip"  # TODO: don't use this feature
  # no_implicit_optional = false

  # see: https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options

  # Start off with these
  warn_unused_configs = true
  warn_redundant_casts = true  # this is not per-module
  warn_unused_ignores = true

  # Getting these passing should be easy
  extra_checks = true  # now incl.: strict_concatenate = true
  strict_equality = true

  # Strongly recommend enabling this one as soon as you can
  check_untyped_defs = true

  # These shouldn't be too much additional work, but may be tricky to
  # get passing if you use a lot of untyped libraries
  # disallow_subclassing_any = true                                                    # excl. for HA
  # disallow_untyped_decorators = true                                                 # excl. for HA
  disallow_any_generics = true

  # These next few are various gradations of forcing use of type annotations
  disallow_untyped_calls = true
  disallow_incomplete_defs = true
  disallow_untyped_defs = true

  # This one isn't too hard to get passing, but return on investment is lower
  no_implicit_reexport = true

  # This one can be tricky to get passing if you use a lot of untyped libraries
  # warn_return_any = true                                                             # excl. for HA: lots of decorators

  # disallow_any_unimported = true
  warn_no_return = true
  warn_unreachable = true


[[tool.mypy.overrides]]
  module = ["homeassistant.*", "ramses_rf.*", "yaml"]

  ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    "setup.py",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "PIE", # flake8-pie
    "RET", # flake8-return
]
ignore = [
    "E203", # whitespace before ':'
    "COM812", # missing-trailing-comma
    "B007", # unused loop variable (often used in loop logic)
    "UP035", # typing imports (still widely used)
    "F401", # unused imports (some are used for type checking)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
  asyncio_mode = "auto"
